...
        manageStorageView.backgroundColor = .black
        manageStorageView.configureRoundedCorners(corners: [.bottomLeft, .bottomRight], radius: DesignMetrics.Padding.size8)
        
        let manageStorageBtn = UIButton()
        manageStorageBtn.setFont(FontManagerDatabox.shared.cloudVaultBoldText(ofSize: 14), for: .normal)
        manageStorageBtn.setTitleColor(.white, for: .normal)
        manageStorageBtn.setTitle("Manage Storage", for: .normal)
        manageStorageBtn.backgroundColor = .clear
        manageStorageBtn.addTarget(self, action: #selector(manageStorageBtnTapped(_:)), for: .touchUpInside)
        manageStorageView.addSubview(manageStorageBtn)
        manageStorageBtn.edgeAnchors == manageStorageView.edgeAnchors
        
        storageStackView.addArrangedSubview(storageSizeInfoView)
...
        
        let privacyPolicyView = UIView()
        privacyPolicyView.heightAnchor == 42
        
        let privacyPolicyContentView = PrivacyAndTermsView()
        privacyPolicyContentView.leftImageView.image = UIImage(named: "privacyPolicyIcon")
        privacyPolicyContentView.titleLabel.text = "Privacy Policy"
        privacyPolicyContentView.rightButton.setTitle("Read", for: .normal)
        privacyPolicyContentView.rightButton.addTarget(self, action: #selector(privacyPolicyBtnTapped(_:)), for: .touchUpInside)
        
        privacyPolicyView.addSubview(privacyPolicyContentView)
        privacyPolicyContentView.verticalAnchors == privacyPolicyView.verticalAnchors + 4
        privacyPolicyContentView.horizontalAnchors == privacyPolicyView.horizontalAnchors + 12
        
        let termsAndConditionsView = UIView()
        termsAndConditionsView.heightAnchor == 42
        
        let termsAndConditionsContentView = PrivacyAndTermsView()
        termsAndConditionsContentView.leftImageView.image = UIImage(named: "termsAndConditionIcon")
        termsAndConditionsContentView.titleLabel.text = "Terms And Conditions"
        termsAndConditionsContentView.rightButton.setTitle("Read", for: .normal)
        termsAndConditionsContentView.rightButton.addTarget(self, action: #selector(termsAndConditionBtnTapped(_:)), for: .touchUpInside)
        
        termsAndConditionsView.addSubview(termsAndConditionsContentView)
        termsAndConditionsContentView.verticalAnchors == termsAndConditionsView.verticalAnchors + 4
        termsAndConditionsContentView.horizontalAnchors == termsAndConditionsView.horizontalAnchors + 12
...
